--- a/_sass/bogamie-blog/_single.scss
+++ b/_sass/bogamie-blog/_single.scss
@@ -75,5 +75,5 @@
 }
 
 .sized__box{
-    height: 240px;
+    height: 16px;
 }
